feat: 管理员-模拟器状态监控
